Compacting CLI subtool closes #624